# Keshe

./: .gitignore  .mcp.json  CLAUDE.md  README.md  rr.md  setup.sh  教程-从零开始.md
.claude/mcp-servers/: auto_tune.py  pyocd_mcp.py  serial_mcp.py
code/MaixCAM/: README.md  color_detector.py  comm.py  config.py  lane_detector.py  main.py  qr_detector.py
code/STM32/: .clangd  CMakeLists.txt  Makefile  STM32F407VETx_FLASH.ld  VSCode调试指南.md  build.bat  build.ps1  compile_commands.json  toolchain-arm-none-eabi.cmake
code/STM32/Inc/: FreeRTOSConfig.h  chassis.h  communication.h  display.h  main.h  motor.h  pid.h  pin_config.h  protocol.h  sensor.h  servo.h  task_manager.h
code/STM32/Src/: blink_test.c  chassis.c  communication.c  display.c  main.c  motor.c  motor_test.c  oled_test.c  pid.c  sensor.c  servo.c  task_manager.c
